# council-transcript

./: .env.example  .gitignore  CLAUDE.md  COUNCIL_REPORT_WORKFLOW.md  README.md  __init__.py  config.py  llm_pipeline.py  main.py  pyproject.toml  transcription.py  youtube_extractor.py
.claude/: settings.json
.claude/agent-memory/smf-perspective/: MEMORY.md  project_council_members.md  project_recurring_issues.md  user_brad_ewing.md
.claude/agent-memory/staff-report-reviewer/: MEMORY.md  project_sm_council_patterns.md  reference_smgov_agendas.md
.claude/agents/: smf-perspective.md  staff-report-reviewer.md
.claude/skills/: council-report.md
.claude/skills/council-report/: SKILL.md
council_transcript/: __init__.py  config.py  main.py  transcription.py  youtube_extractor.py
scripts/: compile_report.py  council_report.py
