[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "council-transcript"
version = "0.1.0"
description = "Extract transcripts from YouTube videos/streams and process via LLM"
requires-python = ">=3.9"
dependencies = [
    "youtube-transcript-api>=0.6.1",
    "yt-dlp>=2024.3.10",
    "anthropic>=0.28.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools]
packages = ["council_transcript"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
